--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -6,7 +6,7 @@
                 <a href="" class="navbar-brand">
                     <h1 class="text-primary"><span class="text-white">HOANGMINH</span> TOUR</h1>
                 </a>
-                <p>Công ty dịch vụ du lịch và vận chuyển Hoàng Minh</p>
+                <p>Công ty dịch vụ du lịch và vận chuyển</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Theo dõi chúng tôi</h6>
                 <div class="d-flex justify-content-start">
                     <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -19,7 +19,7 @@
                 <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Dịch vụ của chúng tôi</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Về chúng tôi</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Đặt tour</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Đặt vé</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Liên hệ</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Tin tức</a>
                 </div>
