--- a/src/main/resources/templates/admin/user-list.html
+++ b/src/main/resources/templates/admin/user-list.html
@@ -3,12 +3,8 @@
 <head>
     <title>Danh Sách Tài Khoản</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link type="text/css" th:href="@{/css/navBar.css}" rel="stylesheet" />
-    <link type="text/css" th:href="@{/admin/css/user.css}" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Thêm jQuery từ CDN -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script th:src="@{/admin/js/user.js}"></script>
+    <link type="text/css" th:href="@{../css/navBar.css}" rel="stylesheet" />
+    <link type="text/css" th:href="@{../admin/css/user.css}" rel="stylesheet" />
     <meta name="_csrf" content="user">
     <meta name="_csrf_header" content="X-CSRF-TOKEN">
 </head>
@@ -234,17 +230,58 @@
         </div>
     </div>
 </div>
+<!-- Modal for Edit Account -->
+<!--<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">-->
+<!--    <div class="modal-dialog">-->
+<!--        <div class="modal-content">-->
+<!--            <div class="modal-header">-->
+<!--                <h5 class="modal-title" id="editModalLabel">Chỉnh Sửa Tài Khoản</h5>-->
+<!--                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--            </div>-->
+<!--            <div class="modal-body">-->
+<!--                <form id="editForm" onsubmit="return false;">-->
+<!--                    <div class="mb-3">-->
+<!--                        <label for="editAccountName" class="form-label">Tên Tài Khoản</label>-->
+<!--                        <input type="text" class="form-control" id="editAccountName" required>-->
+<!--                    </div>-->
+<!--                    <div class="mb-3">-->
+<!--                        <label for="editEmail" class="form-label">Email</label>-->
+<!--                        <input type="email" class="form-control" id="editEmail" required>-->
+<!--                    </div>-->
+<!--                    <div class="mb-3">-->
+<!--                        <label for="editPassword" class="form-label">Mật khẩu</label>-->
+<!--                        <input type="password" class="form-control" id="editPassword" placeholder="Nhập mật khẩu mới nếu muốn thay đổi">-->
+<!--                    </div>-->
+<!--                    <div class="mb-3">-->
+<!--                        <label for="editStatus" class="form-label">Trạng Thái</label>-->
+<!--                        <select class="form-select" id="editStatus" required>-->
+<!--                            <option value="1">Hoạt động</option>-->
+<!--                            <option value="0">Ngưng hoạt động</option>-->
+<!--                        </select>-->
+<!--                    </div>-->
+<!--&lt;!&ndash;                    <div class="mb-3 row">&ndash;&gt;-->
+<!--&lt;!&ndash;                        <div class="col">&ndash;&gt;-->
+<!--&lt;!&ndash;                            <label for="editCustomerID" class="form-label">Mã Khách Hàng</label>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <input type="number" class="form-control" id="editCustomerID" oninput="fetchCustomerName(this.value)" required>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                        <div class="col">&ndash;&gt;-->
+<!--&lt;!&ndash;                            <label for="editCustomerName" class="form-label">Tên Khách Hàng</label>&ndash;&gt;-->
+<!--&lt;!&ndash;                            <input type="text" class="form-control" id="editCustomerName" readonly>&ndash;&gt;-->
+<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+<!--                </form>-->
+<!--            </div>-->
+<!--            <div class="modal-footer">-->
+<!--                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>-->
+<!--                <button type="button" class="btn btn-primary">Cập nhật tài khoản</button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
-<script>
-    function showAddModal() {
-        // Làm sạch các trường trong form
-        document.getElementById('addForm').reset(); // Giả sử form của bạn có id là 'accountForm'
-
-        // Hiện modal
-        const addModal = new bootstrap.Modal(document.getElementById('addModal'));
-        addModal.show();
-    }
-</script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Thêm jQuery từ CDN -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script th:src="@{../admin/js/user.js}"></script>
 </body>
 </html>
