--- a/src/main/resources/templates/admin/stype-list.html
+++ b/src/main/resources/templates/admin/stype-list.html
@@ -1,67 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Danh Sách Ghế</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link type="text/css" th:href="@{/css/navBar.css}" rel="stylesheet" />
-    <link type="text/css" th:href="@{/admin/css/user.css}" rel="stylesheet" />
-</head>
-<body>
-
-<div class="container">
-    <div class="text-center">
-        <h1>Danh Sách Loại Ghế</h1>
-    </div>
-
-    <div class="filter-section mb-3">
-        <form class="row g-2" id="searchForm" onsubmit="return false;">
-            <div class="col-md-8">
-                <div class="input-group">
-                    <input class="form-control" type="text" id="searchInput" placeholder="Tìm kiếm..." aria-label="Search">
-                </div>
-            </div>
-        </form>
-    </div>
-
-    <div class="filter-section mb-3">
-        <div class="row g-2 align-items-center">
-            <div class="col-md-8"></div>
-            <div class="col-md-4 text-end"></div>
-        </div>
-    </div>
-
-
-
-    <div class="table-responsive">
-        <table class="table table-bordered table-hover text-center">
-            <thead>
-            <tr>
-                <th>Mã Loại Ghế</th>
-                <th>Tổng Số Ghế</th>
-                <th>Mô Tả</th>
-            </tr>
-            </thead>
-            <tbody id="table-content">
-            <tr th:each="type : ${seattypes}">
-                <td th:text="${type.id}">ID</td>
-                <td th:text="${type.seat_count}">Plate</td>
-                <td th:text="${type.description}">Status</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Thêm jQuery từ CDN -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script th:src="@{/admin/js/seat.js}"></script>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
     <title>Danh Sách Công Ty</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link type="text/css" th:href="@{/css/navBar.css}" rel="stylesheet" />
@@ -111,14 +50,14 @@
 
 <div class="container">
     <div class="text-center">
-        <h1>Danh Sách Công Ty</h1>
+        <h1>Danh Sách Ghế Ngồi</h1>
     </div>
 
     <div class="filter-section mb-3">
         <form class="row g-2" id="searchForm" onsubmit="return false;">
             <div class="col-md-8">
                 <div class="input-group">
-                    <input class="form-control" type="text" id="searchInput" oninput="filterCompany()" placeholder="Tìm kiếm..." aria-label="Search">
+                    <input class="form-control" type="text" id="searchInput" oninput="filterStype()" placeholder="Tìm kiếm..." aria-label="Search">
                     <!--                    <button type="button" class="btn btn-primary" onclick="filterCompany()">Tìm kiếm</button>-->
                 </div>
             </div>
@@ -129,7 +68,7 @@
         <div class="row g-2 align-items-center">
             <div class="col-md-8"></div>
             <div class="col-md-4 text-end">
-                <button type="button" class="btn btn-success" onclick="showAddModalCompany()">Thêm</button> <!-- Nút Thêm -->
+                <button type="button" class="btn btn-success" onclick="showAddModalStype()">Thêm</button> <!-- Nút Thêm -->
             </div>
         </div>
     </div>
@@ -140,19 +79,19 @@
         <table class="table table-bordered table-hover text-center">
             <thead>
             <tr>
-                <th>Mã Công Ty</th>
-                <th>Tên Công Ty</th>
-                <th>Số Điện Thoại</th>
+                <th>Mã Loại Ghế</th>
+                <th>Tổng Số Ghế</th>
+                <th>Mô Tả</th>
             </tr>
             </thead>
             <tbody id="table-content">
-            <tr th:each="company : ${companies}">
-                <td th:text="${company.id}">ID</td>
-                <td th:text="${company.name}">Name</td>
-                <td th:text="${company.phone_number}">PhoneNumber</td>
+            <tr th:each="type : ${seattypes}">
+                <td th:text="${type.id}">ID</td>
+                <td th:text="${type.seat_count}">Plate</td>
+                <td th:text="${type.description}">Status</td>
                 <td class="d-flex justify-content-evenly">
-                    <button type="button" class="btn btn-warning btn-sm" th:attr="data-id=${company.id}" onclick="editCompany(this)">Chỉnh sửa</button>
-                    <button type="button" class="btn btn-danger btn-sm" th:attr="data-id=${company.id}" onclick="deleteCompany(this)">Xóa</button>
+                    <button type="button" class="btn btn-warning btn-sm" th:attr="data-id=${type.id}" onclick="editStype(this)">Chỉnh sửa</button>
+                    <button type="button" class="btn btn-danger btn-sm" th:attr="data-id=${type.id}" onclick="deleteStype(this)">Xóa</button>
                 </td>
             </tr>
             </tbody>
@@ -170,20 +109,20 @@
             </div>
             <div class="modal-body">
                 <form id="editForm1" onsubmit="return false;">
-                    <input type="hidden" id="CompanyId" />
+                    <input type="hidden" id="stypeId" />
                     <div class="mb-3">
-                        <label for="editCompanyName" class="form-label">Tên công ty</label>
-                        <input type="text" class="form-control" id="editCompanyName" required> <!-- Thêm trường mật khẩu -->
+                        <label for="editSeatCount" class="form-label">Số ghế</label>
+                        <input type="text" class="form-control" id="editSeatCount" required> <!-- Thêm trường mật khẩu -->
                     </div>
                     <div class="mb-3">
-                        <label for="editCompanyPhone" class="form-label">Số điện thoại</label>
-                        <input type="text" class="form-control" id="editCompanyPhone" required> <!-- Thêm trường họ tên -->
+                        <label for="editDescription" class="form-label">Mô tả</label>
+                        <input type="text" class="form-control" id="editDescription" required> <!-- Thêm trường họ tên -->
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="closeModalCompany()">Đóng</button>
-                <button type="button" class="btn btn-primary" onclick="saveChangesCompany()">Lưu thay đổi</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="closeModalStype()">Đóng</button>
+                <button type="button" class="btn btn-primary" onclick="saveChangesStype()">Lưu thay đổi</button>
             </div>
         </div>
     </div>
@@ -195,24 +134,24 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addModalLabel">Thêm Tài Khoản</h5>
+                <h5 class="modal-title" id="addModalLabel">Thêm Loại Ghế</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form method="post" id="addForm" onsubmit="return false;">
                     <div class="mb-3">
-                        <label for="addCompanyName" class="form-label">Tên công ty</label>
-                        <input type="text" class="form-control" id="addCompanyName" required> <!-- Thêm trường mật khẩu -->
+                        <label for="addSeatCount" class="form-label">Số ghế</label>
+                        <input type="text" class="form-control" id="addSeatCount" required> <!-- Thêm trường mật khẩu -->
                     </div>
                     <div class="mb-3">
-                        <label for="addCompanyPhone" class="form-label">Số điện thoại</label>
-                        <input type="text" class="form-control" id="addCompanyPhone" required> <!-- Thêm trường họ tên -->
+                        <label for="addDescription" class="form-label">Mô tả</label>
+                        <input type="text" class="form-control" id="addDescription" required> <!-- Thêm trường họ tên -->
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="closeModalCompany()">Đóng</button>
-                <button type="button" class="btn btn-primary" onclick="addCompany()">Thêm công ty</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="closeModalStype()">Đóng</button>
+                <button type="button" class="btn btn-primary" onclick="addStype()">Thêm loại ghế</button>
             </div>
         </div>
     </div>
